# reactor_physics_lessons

./: .gitattributes  .gitignore  .readthedocs.yaml  Allclean  CLAUDE.md  README.md  ReadMe.md  SESSION_01_REPORT.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/plans/: issue-100-103-rank-n-class-b-multi-region.md  issue-129-planar-limit-resolution.md  next-session-post-retraction.md  post-four-reference-synthesis-close-out.md  post-issue-119-rank-n-marshak-closure.md  post-marshak-primitives-landed-closure-open.md  post-peierls-solver-bugs.md  post-phase-f-hollow-core-rank-2-bc.md  post-rank-n-hollow-sphere-closure-characterization.md  precision-floor-tool.md  rank-n-closure-research-log.md  specular-bc-method-of-images.md  specular-bc-phase4-multibounce-rollout.md  surface-centred-quadrature.md  verification-spec-split-adaptive.md
00.Demo/: central_limit_theorem.py  spherical_harmonics.py
01.Homogeneous.Reactors/: homogeneous.py  plotting.py  run_homogeneous.py
02.Discrete.Ordinates/: IMPROVEMENTS.md  TODO_cylindrical_dd.md  demo_discrete_ordinates.py  discrete_ordinates.py  numerical_notes.md  plotting.py  run_discrete_ordinates.py  sn_1d.py  sn_geometry.py  sn_operator.py  sn_quadrature.py  sn_solver.py  sn_sweep.py
03.Method.Of.Characteristics/: IMPROVEMENTS.md  method_of_characteristics.py  moc_geometry.py  moc_quadrature.py  moc_solver.py  plotting.py  run_moc.py
04.Monte.Carlo/: IMPROVEMENTS.md  demo_monte_carlo_geometry.py  monte_carlo.py  plotting.py  run_monte_carlo.py
05.Diffusion.1D/: diffusion_1d.py  run_diffusion_1d.py
06.Fuel.Behaviour/: fuel_behaviour.py  run_fuel_behaviour.py
07.Thermal.Hydraulics/: IMPROVEMENTS.md  run_thermal_hydraulics.py  run_thermal_hydraulics_dae.py  thermal_hydraulics.py  thermal_hydraulics_dae.py
08.Reactor.Kinetics.0D/: IMPROVEMENTS.md  reactor_kinetics.py  run_reactor_kinetics.py
09.Collision.Probability/: collision_probability.py  collision_probability_slab.py  demo_cp_concentric.py  demo_cp_slab.py  plotting.py  run_collision_probability.py  run_slab_cp.py  run_verification.py
data/: IMPROVEMENTS.md
data/macro_xs/: __init__.py  benchmarks.py  interpolation.py  mixture.py  recipes.py  sigma_zeros.py
data/materials/: __init__.py  h2o_properties.py  matpro.py
data/micro_xs/: B_011.GXS  H_001.GXS  NA023.GXS  O_016.GXS  U_235.GXS  U_238.GXS  ZR091.GXS  ZR096.GXS  convert_gxs_to_hdf5.py  gendf.py  hdf5_io.py  isotope.py
derivations/: IMPROVEMENTS.md  TODO_transport_eigenmodes.md  mc.py  moc.py  peierls_cylinder_3d_mode_n.py  peierls_specular_bc.py  peierls_specular_slab.py  reference_values.py  sn.py  sn_contamination.py
derivations/archive/: README.md  peierls_cylinder_polar_assembly.py  (+2 more)
docs/: conf.py  index.rst
graphify-out/: GRAPH_REPORT.md  graph.json
numerics/: __init__.py  eigenvalue.py
orpheus/: __init__.py  plotting.py
student_resources/: 01_homogeneous_reactors.py  02_discrete_ordinates.py  02_spherical_harmonics.py  03_method_of_characteristics.py  04_collision_probability.py  04_monte_carlo.py  05_central_limit_theorem.py  05_diffusion_1d.py  05_monte_carlo.py  06_diffusion_1d.py  06_fuel_behaviour.py  07_fuel_behaviour.py  07_thermal_hydraulics.py  08_reactor_kinetics.py  08_thermal_hydraulics.py  09_collision_probability.py  09_reactor_kinetics.py
tests/: conftest.py  l0_error_catalog.md  test_convergence.py  test_cp_cylinder.py  test_cp_diagnostics.py  test_cp_properties.py  test_cp_slab.py  test_cp_sphere.py  test_cp_verification.py  test_diffusion.py  test_diffusion_properties.py  test_discrete_ordinates.py  test_geometry.py  test_homogeneous.py  test_mc_convergence.py  test_mc_cross_verification.py  test_mc_gaps.py  test_mc_properties.py  test_moc.py  test_moc_properties.py  test_moc_quadrature.py  test_moc_ray_tracing.py  test_moc_verification.py  test_monte_carlo.py  test_pending_ports.py  test_sn_1d.py  test_sn_cylindrical.py  test_sn_properties.py  test_sn_quadrature.py  test_sn_solver_components.py  test_sn_spherical.py  test_sn_sweep_regression.py  test_vv_harness_audit.py
tools/: __init__.py  plotting.py
(+343 files in other folders)
