[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orpheus"
version = "0.1.0"
description = "Open Reactor Physics Educational University System"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.14",
    "matplotlib>=3.8",
    "pyXSteam>=0.4",
    "h5py>=3.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "sympy>=1.13",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "sphinxcontrib-nexus>=0.3",
    "sympy>=1.13",
]
dev = [
    "orpheus[test,docs]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Modern importlib-based discovery. Required once tests/ grew to a
# nested layout (``tests/sn/``, ``tests/cp/``, ...) because several
# subfolders share basenames (e.g. ``test_properties.py`` exists in
# cp/, sn/, mc/, moc/, diffusion/, moc/). The legacy ``prepend``
# import mode would import each as the same top-level module name
# and raise "import file mismatch" on collection. Passed via
# ``addopts`` because the ``importmode`` key is not a recognised
# pytest ini option — only the CLI flag form is supported.
addopts = "--import-mode=importlib"
markers = [
    "slow: long-running tests (MC, full convergence studies)",
    "l0: L0 Term Verification — hand calc vs code, per term (synthetic XS)",
    "l1: L1 Equation Verification — analytical/MMS, asserts convergence order",
    "l2: L2 Integration — multi-group heterogeneous, self-convergence",
    "l3: L3 Validation — comparison against experiment (ICSBEP, IRPhE)",
    "foundation: Foundation — software invariant (data structure / numerical primitive), not a physics equation",
    "verifies(*labels): Sphinx equation labels (:label: in docs/theory/*.rst) that this test exercises",
    "catches(*tags): failure-mode (FM-NN) or error-catalog (ERR-NNN) tags this test guards",
]

[tool.setuptools.packages.find]
include = ["orpheus*"]
